--- a/day2ProgressSteps/src/assets/style.css
+++ b/day2ProgressSteps/src/assets/style.css
@@ -26,6 +26,18 @@ body {
   width: auto;
   margin-bottom: 30px;
 }
+.circleActive {
+  background-color: #ffff;
+  color: #999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  border: 4px solid var(--line-border-fill);
+}
 
 .circle {
   background-color: #ffff;
@@ -33,24 +45,29 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: none;
   width: 40px;
   height: 40px;
   border-radius: 40px;
   border: 4px solid var(--line-border-empty);
+  transition: 700ms ease;
 }
 
 .circle.active {
-  border: var(--line-border-fill);
+  border: 4px solid var(--line-border-fill);
+  transition: 700ms ease;
 }
 
 .line {
   width: 100px;
   height: 4px;
   background-color: var(--line-border-empty);
+  transition: 700ms ease;
 }
 
 .line.active {
   background-color: var(--line-border-fill);
+  transition: 700ms ease;
 }
 
 .buttonContainer {
@@ -67,10 +84,12 @@ body {
   height: 40px;
   width: 100px;
   border-radius: 10px;
+  user-select: none;
   background-color: var(--line-border-empty);
   color: #ffff;
   font-size: large;
   font-family: inherit;
+  transition: 300ms ease;
 }
 .next {
   display: flex;
@@ -81,12 +100,21 @@ body {
   height: 40px;
   width: 100px;
   border-radius: 10px;
+  user-select: none;
   background-color: var(--line-border-empty);
   color: #ffff;
   font-size: large;
   font-family: inherit;
+  transition: 300ms ease;
 }
 
-.button.active {
+.prev.active {
   background-color: var(--line-border-fill);
+  transform: scale(0.98);
+  transition: 300ms ease;
+}
+.next.active {
+  background-color: var(--line-border-fill);
+  transform: scale(0.98);
+  transition: 300ms ease;
 }
