--- a/day2ProgressSteps/src/assets/style.css
+++ b/day2ProgressSteps/src/assets/style.css
@@ -26,18 +26,6 @@ body {
   width: auto;
   margin-bottom: 30px;
 }
-.circleActive {
-  background-color: #ffff;
-  color: #999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  user-select: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 40px;
-  border: 4px solid var(--line-border-fill);
-}
 
 .circle {
   background-color: #ffff;
@@ -70,28 +58,12 @@ body {
   transition: 700ms ease;
 }
 
-.buttonContainer {
+.btnContainer {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.prev {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 10px;
-  border: 0;
-  height: 40px;
-  width: 100px;
-  border-radius: 10px;
-  user-select: none;
-  background-color: var(--line-border-empty);
-  color: #ffff;
-  font-size: large;
-  font-family: inherit;
-  transition: 300ms ease;
-}
-.next {
+.btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -108,12 +80,7 @@ body {
   transition: 300ms ease;
 }
 
-.prev.active {
-  background-color: var(--line-border-fill);
-  transform: scale(0.98);
-  transition: 300ms ease;
-}
-.next.active {
+.btn.active {
   background-color: var(--line-border-fill);
   transform: scale(0.98);
   transition: 300ms ease;
